# system-monitor

./: #ui.glade#  Cargo.toml  style.css  theme.css  ui.glade  ui.glade~
src/: main.rs  state.rs
src/styles/: mod.rs
src/ui/: mod.rs  window.rs
src/ui/components/: button.rs
src/ui/layouts/: cpu_layout.rs  inner_layout.rs  main_layout.rs  memory_layout.rs  mod.rs
